RESOLVED FIXED107039
Web Inspector: Crash at Console.cpp:216 (use of RefPtr after release to PassRefPtr)
https://bugs.webkit.org/show_bug.cgi?id=107039
Summary Web Inspector: Crash at Console.cpp:216 (use of RefPtr after release to PassR...
Timothy Hatcher
Reported 2013-01-16 12:06:05 PST
The arguments RefPtr is being released and later used. I have some other tweaks in this function too.
Attachments
Proposed Change (2.99 KB, patch)
2013-01-16 12:09 PST, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2013-01-16 12:09:28 PST
Created attachment 183017 [details] Proposed Change
Joseph Pecoraro
Comment 2 2013-01-16 12:12:45 PST
Comment on attachment 183017 [details] Proposed Change r=me Although it might be nice to make a test for this. I'm surprised that it wasn't covered by existing tests.
WebKit Review Bot
Comment 3 2013-01-16 14:54:10 PST
Comment on attachment 183017 [details] Proposed Change Clearing flags on attachment: 183017 Committed r139927: <http://trac.webkit.org/changeset/139927>
WebKit Review Bot
Comment 4 2013-01-16 14:54:13 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5 2013-01-16 18:59:09 PST
Comment on attachment 183017 [details] Proposed Change View in context: https://bugs.webkit.org/attachment.cgi?id=183017&action=review > Source/WebCore/page/Console.cpp:218 > + String argAsString = arguments->argumentAt(i).toString(arguments->globalState()); > + printf(" %s", argAsString.utf8().data()); Could all be one line now without a local variable.
Note You need to log in before you can comment on or make changes to this bug.