Fix a crash when printing console messages to STDOUT.

https://bugs.webkit.org/show_bug.cgi?id=107039

Reviewed by Joseph Pecoraro.

* page/Console.cpp:
(WebCore::internalAddMessage): Don't release the RefPtr early. Also log the line number
and convert non-string arguments to strings when printing them.


Canonical link: https://commits.webkit.org/125302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139927 268f45cc-cd09-0410-ab3c-d52691b4dbfc